--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "jest": "^26.5.3"
+    "jest": "^26.5.3",
+    "node-fetch": "^2.6.1"
   }
 }
